correction bug affichage contact + remove fb

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         </nav>
 
         <div class="follow">
-            <a href="#facebook" class="fab fa-facebook"></a>
-            <a href="#linkedin" class="fab fa-linkedin"></a>
-            <a href="#github" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/sami-drach/" class="fab fa-linkedin"></a>
+            <a href="https://github.com/voltsams" class="fab fa-github"></a>
         </div>
     </header>
     <!------------ HEADER NAVBAR END  ------------>
@@ -49,7 +48,7 @@
             <h3>Moi, c'est Sami Drach</h3>
             <span>Web Developer Junior</span>
             <p>Je recherche une alternance de 1 an afin de réaliser ma licence Concepteur Développeur d'Applications </p>
-            <a href="#about" class="btn">about me</a>
+            <a href="#about" class="btn">About me</a>
         </div>
     </section>
     <!------------  HOME SECTION END ------------>
@@ -58,12 +57,12 @@
     <!------------ ABOUT SECTION START ------------>
     <section class="about" id="about">
         <h1 class="heading">
-            <span>biography</span>
+            <span>biographie</span>
         </h1>
 
         <div class="biography">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur expedita saepe, debitis cumque obcaecati fuga corporis praesentium incidunt reiciendis!
+                Rapidement, qui suis-je ? Qu'est ce que je recherche ?
             </p>
                  
                 <div class="info">
@@ -267,7 +266,7 @@
                     <a href="https://github.com/voltsams/projet_stage_symfony">
                         <img src="images/bedbox.jpg" alt="Capture d'écran d'un site e-commerce">
                     </a>
-                    <h3>Site Bedbox</h3>
+                    <h3>Projet Bedbox</h3>
                     <span>2022</span>
                 </div>
 
